--- a/css/styles.css
+++ b/css/styles.css
@@ -111,14 +111,14 @@ p {
   justify-content: center;
   position: absolute;
   width: 88%;
-  top: 155px;
+  top: 165px;
   left: 10px;
   margin: 0 5%;
-  height: 380px;    
+  height: 420px;    
   display: flex;
   border-radius: 120px 0 0 0;
   outline: 1px solid #EBD398;
-  background: linear-gradient(90deg, rgba(21,11,1,1) 10%, rgba(21,11,1,0.8743872549019608) 45%, rgba(21,11,1,0.16010154061624648) 100%);
+  background: linear-gradient(80deg, rgba(21,11,1,1) 10%, rgba(21,11,1,0.8743872549019608) 45%, rgba(21,11,1,0.16010154061624648) 100%);
 }
 
 
@@ -197,7 +197,7 @@ p {
 
 
 .Exquisite__hapiness__section2{
-  bottom: 0px;
+  bottom: -20px;
 }
 .Exquisite__hapiness__section2 a{
   padding: 10px 15px;
@@ -209,7 +209,7 @@ p {
   font-weight: 700;
 }
 .Exquisite__hapiness__section2 p{
-  padding-bottom: 35px;
+  padding-bottom: 30px;
   width: 44%;
 }
 .Exquisite__hapiness__background{
@@ -228,19 +228,19 @@ p {
   width: 245px;
   height: 326px;
   border-radius: 60px 0 0 0;
-  outline: 1px solid #EBD398;
+  /* outline: 1px solid #EBD398; */
   top: 23% !important;
   right: 25%;
 }
 .section2__cupcake__torta{
-  transform: scale(0.7) translate(-65px, -140px);
+  transform: scale(0.9) translate(-15px, -70px);
 }
 .Exquisite__hapiness__linea2{
   position: absolute;
   width: 245px;
   height: 326px;
   border-radius: 60px 0 0 0;
-  outline: 1px solid #EBD398;
+  /* outline: 1px solid #EBD398; */
   top: 8% !important;
   right: 10%;
 }
@@ -249,7 +249,7 @@ p {
 
 
 .Our__products__section3{
-  bottom: 650px;
+  bottom: 800px;
 }
 .title__img--style{
   margin: 0 15px;
@@ -257,7 +257,7 @@ p {
   border-radius: 60px 0 60px 0px;
 }
 .Our__products__title__Img{
-  transform: scale(0.7);
+  transform: scale(0.68);
 }
 .Our--products--div--title{  
   right: 10%;  
@@ -317,6 +317,7 @@ p {
   width: 100%;
   height: 90%;  
   object-fit: cover;
+  border-radius:  60px 0 60px 0;
   
 }
 .gallery__item{
