--- a/css/login.css
+++ b/css/login.css
@@ -13,8 +13,8 @@ body {
 }
 
 button {
-  /* background-color: transparent; */
-  /* border: none; */
+  background-color: transparent;
+  border-style: none;
 }
 
 ul {
@@ -42,6 +42,10 @@ p {
 }
 .flex {
   display: flex;   
+}
+.flex--direction--row{
+  flex-direction: row;
+
 }
 /*clase utilitaria para acomodar horizontalmente todo en el centro*/
 .aling-items-center {
@@ -109,6 +113,7 @@ p {
   object-fit: cover;
   top: 20%;
   height: 621px;
+ 
 }
 .fondo__degrade {
   /*display: flex;*/
@@ -123,27 +128,27 @@ p {
   display: flex;
   border-radius: 20px;
   outline: 1px solid #EBD398; 
+  /* align-items: center; */
+  padding-left: 5%;
+  padding-top: 20px;
   
 }
 
 .loginForm{
-  top: 55px;
-  left: 8%;
+  
+  width: 100%;
+  
 }
 .createUserForm{
-  top: 55px;
-  left: 8%;
+  margin-top: -15px;
+  width: 100%;
 }
-.loginForm h1{
+.fondo__degrade h1{
   margin-bottom: 20px;
   align-items: center;
-  font-size: 2em; 
+  font-size: 2em !important; 
 }
-.createUserForm h1{
-  margin-bottom: 20px;
-  align-items: center;
-  font-size: 2em; 
-}
+
 .logIn__label{
   text-decoration: none;
   font-size: .9em;
@@ -155,57 +160,67 @@ p {
   background-color: #DF9146;
   opacity: 20%;
   padding: 5px;
-  width: 25%;
+  width: 27%;
   height: 40px;
   margin-top: 5px;
-  margin-bottom: 18px;
+  margin-bottom: 10px;
   border: none;
   border-radius: 15px 0 15px 0;
 }
-.registration__registration {
+.placeholder--detail{
+  width: 80% !important;
+  
+}
+.name__placeholders{
+  margin-right: -20px;
+}
+
+.registration__registration {  
+  cursor: pointer;
   display: block;
   text-decoration: underline;
-  font-family: "Outfit", sans-serif;
-  font-weight: lighter;
-  color: #5C302F;
-  font-size: 1em;
-  margin: 15px 0;
-  background-color: transparent;
+  color: #DF9146;
+  font-size: 0.9em;
+  margin-top: -5px;
   border: none;
+  width: 280px;
+  
 }
 .registration__registration--hide {
   display: none;
 } 
 
 .logIn__submit{
-  font-size: .8em;
+  font-size: .9em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   color: #5F2D12;
   background-color: #EBD398;
   border-radius: 165px;
   padding: 10px 40px;
-  width: 20%;
+  width: 22%;
   margin-top: 10px;
   cursor: pointer;
-  margin-left: 28px;
+  margin-left: 26px;
+  border-style: none;
+  margin-bottom: 20px;
 }
 .logIn__submit:hover {
-  background-color: #DF9146;
+  background-color: #DF9146;  
 } 
 
-.signup {
+.createUserForm {
   display: none;
 }
 
-.signup--show {
+.createUserForm--show {
   display: block;
 }
 
-.login {
+.loginForm {
   display: block;
 }
 
-.login--hide {
+.loginForm--hide {
   display: none;
 } 
