--- a/css/product.css
+++ b/css/product.css
@@ -104,13 +104,14 @@ p {
 .banner__img {
   object-fit: cover;
   top: 20%;
+  height: 400px;
 }
 .fondo__degrade {
   /*display: flex;*/
   flex-direction: column;
   justify-content: center;
   position: absolute;
-  width: 75%;
+  width: 55%;
   top: 155px;
   left: 10px;
   margin: 0 5%;
@@ -119,3 +120,4 @@ p {
   outline: 1px solid #EBD398;
  /* background: linear-gradient(90deg, rgba(21,11,1,1) 10%, rgba(21,11,1,0.8743872549019608) 45%, rgba(21,11,1,0.16010154061624648) 100%);*/
 }
+
