--- a/css/shopCake.css
+++ b/css/shopCake.css
@@ -115,8 +115,8 @@
   display: flex;
   outline: 1px solid #EBD398;
   padding-left: 120px;
-  border-radius: 120px 0 0 0;
-  background: linear-gradient(80deg, rgba(21,11,1,1) 10%, rgba(21,11,1,0.8743872549019608) 45%, rgba(21,11,1,0.16010154061624648) 100%);
+  /* border-radius: 120px 0 0 0; */
+  /* background: linear-gradient(80deg, rgba(21,11,1,1) 10%, rgba(21,11,1,0.8743872549019608) 45%, rgba(21,11,1,0.16010154061624648) 100%); */
 }
 /* .text--details{
   margin-left: 10%;
@@ -181,26 +181,6 @@
   width: 80%;
 }
 
-.cake_gallery_container{
-  bottom: 1250px;
-  
-}
-.cake_gallery_container{
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 350px;
-  padding: 12%;  
-  
-}
-/* .specialties__section1 a{  
-  padding: 10px 15px;
-  outline: 2px solid #EBD398;
-  color:#EBD398;
-  text-decoration: none;
-  font-size: .75em;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
-} */
 
 .filters{
   margin-top: 70px;
@@ -224,7 +204,30 @@
   text-decoration: none;  
   padding-right: 15px;  
 }
+.gallery__item{
+  
+}
 
+.cake_gallery_container{
+  bottom: 1250px;
+  
+}
+.cake_gallery_container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 350px;
+  padding: 12%;  
+  
+}
+/* .specialties__section1 a{  
+  padding: 10px 15px;
+  outline: 2px solid #EBD398;
+  color:#EBD398;
+  text-decoration: none;
+  font-size: .75em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+} */
 
 
 .products{
@@ -240,7 +243,7 @@
 }
 
 .product{
-  width: 200px;
+  width: 100%;
   display: block;
   margin-bottom: 15px;
 
